--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@
   font-size: large;
 }
 
+img {
+  width : 500px;
+  height: 300px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
